# tensorzero_scratch

./: .env.example  .gitignore  .gitmodules  AGENT_README.md  CLAUDE.md  Dockerfile.jupyter  LICENSE  PLAN.md  README.md  docker-compose.yml  pyproject.toml  run_agent.py  test_agent_tools.py  test_gateway.py  test_multi_provider.py  test_tools.py
config/: tensorzero.toml
config/functions/: calculator.json  get_weather.json  search_tensorzero_docs.json
config/functions/analyze_sentiment/: output_schema.json  system_schema.json  system_template.minijinja
docs/: tensorzero-reference.md
notebooks/: 01_basic_gateway.ipynb  02_multi_provider_testing.ipynb  03_observability.ipynb  05_agents.ipynb
src/tensorzero_scratch/: __init__.py  langgraph_agent.py  langgraph_agent.py.backup  tensorzero_chat_model.py
